# Windows-Manager

./: .gitignore  CMakeLists.txt
include/: definitions.hpp  window_manager.hpp
src/: main.cpp  window_manager.cpp
